--- a/TickMe/TickMe.csproj
+++ b/TickMe/TickMe.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
+    <UserSecretsId>0c4a47a9-643e-4a28-9176-445b90c0231b</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
