Splitted into microservices

--- a/TestWebApi/Properties/launchSettings.json
+++ b/TestWebApi/Properties/launchSettings.json
@@ -3,19 +3,23 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:50080",
-      "sslPort": 44391
+      "applicationUrl": "http://localhost:50083",
+      "sslPort": 44322
     }
   },
+  "$schema": "http://json.schemastore.org/launchsettings.json",
   "profiles": {
     "IIS Express": {
       "commandName": "IISExpress",
+      "launchUrl": "api/values",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "TickMe": {
-      "commandName": "IISExpress",
+    "TestWebApi": {
+      "commandName": "Project",
+      "launchBrowser": true,
+      "launchUrl": "api/values",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
