--- a/TickMe/appsettings.json
+++ b/TickMe/appsettings.json
@@ -5,6 +5,8 @@
     }
   },
   "AllowedHosts": "*",
+  "TicketApiUrl": "http://localhost:50082/api/tickets",
+  "PaymentApiUrl": "http://localhost:50081/api/payment",
   "KeyVault": {
     "Vault": "tickme",
     "ClientId": "4d1a35c9-bc42-4893-9eac-44eb4274b6fd",
