--- a/TickMePayments/appsettings.json
+++ b/TickMePayments/appsettings.json
@@ -1,14 +1,13 @@
 {
-  "AzureAd": {
-    "Instance": "https://login.microsoftonline.com/",
-    "Domain": "tickme.onmicrosoft.com",
-    "TenantId": "caf4cc8a-2391-44dc-ae45-7415c4342278",
-    "ClientId": "8ac96cb5-54dc-455b-a683-26973a89e92c"
-  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "KeyVault": {
+    "Vault": "tickme",
+    "ClientId": "4d1a35c9-bc42-4893-9eac-44eb4274b6fd",
+    "ClientSecret": "Q0zfthqUi3s75Uao2rvFir1E1byggiUwPnFBLkamAYo="
+  }
 }
