--- a/TickMeTickets/Properties/launchSettings.json
+++ b/TickMeTickets/Properties/launchSettings.json
@@ -17,13 +17,12 @@
       }
     },
     "TickMeTickets": {
-      "commandName": "Project",
-      "launchBrowser": true,
+      "commandName": "IISExpress",
       "launchUrl": "api/values",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "https://localhost:5001;http://localhost:5000"
+      "applicationUrl": "http://localhost:50082"
     }
   }
 }
