--- a/TickMeTickets/appsettings.json
+++ b/TickMeTickets/appsettings.json
@@ -4,5 +4,10 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "KeyVault": {
+    "Vault": "tickme",
+    "ClientId": "4d1a35c9-bc42-4893-9eac-44eb4274b6fd",
+    "ClientSecret": "Q0zfthqUi3s75Uao2rvFir1E1byggiUwPnFBLkamAYo="
+  }
 }
