--- a/TickMe/appsettings.json
+++ b/TickMe/appsettings.json
@@ -8,9 +8,9 @@
   "TicketApiUrl": "http://localhost:50082/api/tickets",
   "PaymentApiUrl": "http://localhost:50081/api/payment",
   "KeyVault": {
-    "Vault": "tickme",
-    "ClientId": "4d1a35c9-bc42-4893-9eac-44eb4274b6fd",
-    "ClientSecret": "Q0zfthqUi3s75Uao2rvFir1E1byggiUwPnFBLkamAYo="
+    "Vault": "<KeyVault Name>",
+    "ClientId": "<AzureAD ApplicationID>",
+    "ClientSecret": "<AzureAD Application Secret>"
   }
 } 
 
