--- a/TickMePayments/appsettings.json
+++ b/TickMePayments/appsettings.json
@@ -6,8 +6,8 @@
   },
   "AllowedHosts": "*",
   "KeyVault": {
-    "Vault": "tickme",
-    "ClientId": "4d1a35c9-bc42-4893-9eac-44eb4274b6fd",
-    "ClientSecret": "Q0zfthqUi3s75Uao2rvFir1E1byggiUwPnFBLkamAYo="
+    "Vault": "<KeyVault Name>",
+    "ClientId": "<AzureAD ApplicationID>",
+    "ClientSecret": "<AzureAD Application Secret>"
   }
 }
